package com.kenzie.groupwork.shoppingadvisor.resources;

/**
 * Represents categories on the Amazon retail website.
 */
public enum SearchCategory {
    BEAUTY, BOOKS, CLOTHING, ELECTRONICS, HEALTH, HOME_AND_GARDEN, PET_SUPPLIES, SPORTS, TOYS;
}
